tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_imports_no_super/execute__tests__noirc_frontend_tests_imports_no_super_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: There is no super module
  ┌─ src/main.nr:2:9
  │
2 │     use super::some_func;
  │         -----
  │

Aborting due to 1 previous error
