tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_imports_no_super/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: There is no super module
  ┌─ src/main.nr:2:9
  │
2 │     use super::some_func;
  │         -----
  │

Aborting due to 1 previous error
